--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "orie@or13.io",
   "license": "MIT",
   "dependencies": {
+    "bluebird": "^3.4.1",
     "chai": "^3.5.0",
     "firebase": "^3.2.1",
     "firebase-tools": "^3.0.6",
+    "gdax": "^0.2.1",
     "mocha": "^3.0.0"
   }
 }
