--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "firedax",
   "version": "1.0.0",
-  "description": "Firebase GDAX and IPFS.",
+  "description": "Firebase GDAX.",
   "main": "firedax.js",
   "scripts": {
     "test": "mocha --recursive src ",
     "docs-gen": "rm -rf docs; jsdoc --configure .jsdoc.json --verbose",
     "docs-serve": "http-server docs",
     "docs-deploy": "gulp deploy",
-    "docs-debug": "rm -rf docs; jsdoc --configure .jsdoc.json --verbose; ipfs daemon & http-server docs;"
+    "docs-debug": "rm -rf docs; jsdoc --configure .jsdoc.json --verbose; http-server docs;"
   },
   "author": "orie@or13.io",
   "homepage": "https://github.com/OR13/firedax",
@@ -26,7 +26,6 @@
     "gulp": "^3.9.1",
     "gulp-gh-pages": "^0.5.4",
     "http-server": "^0.9.0",
-    "ipfs-api": "^6.0.3",
     "jsdoc": "^3.4.0",
     "mocha": "^3.0.0"
   }
